# ReportAPI

./: .gitignore  README.md  docker-compose.local.yml  docker-compose.production.yml  main.py  pyproject.toml
.devcontainer/: bashrc.override.sh  devcontainer.json
.envs/.local/: .dba  .fastapi
.envs/.local/dbs/: .dba
.envs/.production/: .fastapi
compose/local/fastapi/: Dockerfile  start
compose/production/fastapi/: Dockerfile  start
src/app/: main.py
src/app/controllers/: controller.py
src/app/controllers/v1/: controller.py  dba_controller.py  fastapi.py
src/app/core/: config.py  limiter.py  logger.py  setup.py
src/app/core/db/: dba_database.py
src/app/middleware/: logger_middleware.py
src/app/schema/: vend_schema.py
src/app/service/: dependencies.py  vend_service.py
src/app/sql/: vend.sql  vend_count.sql
src/app/sql/vend/: vend_report.sql
tests/: conftest.py
